# SLIC-Superpixel

./: CMakeLists.txt  README.md  slic.cpp  slic.h  test_slic.cpp
